--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
                 
                 <div class="slide_img" id="two">
                     
-                        <img src="img/proj2.png">
+                        <img src="img/weather_api_app_pt.png">
 
                         <div class="onclick">
                             <a href="#proj2"></a>
@@ -140,22 +140,18 @@
             </div>
             <div class="projects__box2" id="proj2">
                 <div class="projects__text">
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Nulla provident tempora eos adipisci incidunt ex temporibus 
-                        natus quam obcaecati cum ab dolor molestias neque eaque maiores necessitatibus ipsa, 
-                        laudantium dignissimos expedita labore atque. Nostrum praesentium rerum consequuntur ipsam 
-                        repudiandae, quisquam architecto quam iste animi nisi,
-                        debitis sed sit omnis dolorum cum ullam ipsum culpa sequi. Nihil adipisci ut pariatur nesciunt 
-                        iste corrupti, velit non ab, minima cumque quas! Et dicta facere reprehenderit vitae velit dignissimos delectus dolor 
-                        inventore ad officia!</p>
+                    <p> Este é um aplicativo que foi desenvolvido utilizando React.js. O objetivo deste projeto foi 
+                        extrair informações de um API (openweathermap)
+                        e de acordo com a cidade escolhida, disponiblizar o clima daquela região. 
+                    </p>
                 </div>
                 <div class="projects__image">
-                    <img src="img/proj2.png">
+                    <img src="img/weather_api_app_pt.png">
                     <div class="projects__links">
-                        <a href="projects.html">
+                        <a href="https://weather-api-app-pt.herokuapp.com/">
                             <i class="far fa-eye fa-2x">  Preview</i>
                         </a>
-                        <a href="projects.html">
+                        <a href="https://github.com/DanielTVeloso/Weather_api_app_pt">
                             <i class="fab fa-github fa-2x"> Github</i>
                         </a>
                     </div>
