added dani_shop project

--- a/projects.html
+++ b/projects.html
@@ -51,7 +51,7 @@
                 
                 <div class="slide_img" id="one">			
                         
-                        <img src="img/projeto_node_passport_authentication.JPG">
+                        <img src="img/dani_shop.PNG">
 
                         <div class="onclick">
                             <a href="#proj1"></a>
@@ -120,12 +120,12 @@
         <div class="projects__descripition">
             <div class="projects__box1" id="proj1">
                 <div class="projects__image">
-                    <img src="img/projeto_node_passport_authentication.JPG"> 
+                    <img src="img/dani_shop.PNG"> 
                     <div class="projects__links">
-                        <a href="https://node-passport-authentication-d.herokuapp.com/">
+                        <a href="https://dani-shop.herokuapp.com/">
                             <i class="far fa-eye fa-2x">  Preview</i>
                         </a>
-                        <a href="https://github.com/DanielTVeloso/Node_Passport_Authentication">
+                        <a href="https://github.com/DanielTVeloso/Dani_shop">
                             <i class="fab fa-github fa-2x"> Github</i>
                         </a>
                     </div>
