change on dani-shop description

--- a/projects.html
+++ b/projects.html
@@ -131,10 +131,11 @@
                     </div>
                 </div>
                 <div class="projects__text">
-                    <p> O projeto consiste num sistema de registro e login de usuários. O projeto foi feito 
-                        em Node.js e Express.js. Os dados dos usários são salvos em um bando de dados do MongoDB.
-                        As senhas foram salvas utilizando a encriptação do bcrypt. Para verificação de que a sessião 
-                        terminou ou não, caso o usário faça logout, foi utilizado o passportjs.
+                    <p> O projeto consiste na construção de um site e-commerce, com sistema de login/resgistro. 
+                        Utilizou-se o JsonWebToken (JWT), juntamente com o MongoDB, para salvar as informações
+                        dos usuários. Também foi desenvolvido uma funcionalidade especial para que o administrador do site
+                        possa criar novos produtos e alterar já existentes. O site foi desenvolvido em
+                        Node.js e React.js
                     </p>
                 </div>
             </div>
